<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_secret"
    style="@style/layout_generic"
    android:backgroundTint="@color/third_alt"
    android:layout_alignParentBottom="true">
    <TextView
        android:id="@+id/create_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textColor="@color/contrast"
        android:textStyle="bold"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:layout_alignParentStart="true"
        android:layout_above="@id/create_title"/>
    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_button"
        android:textSize="20sp"
        android:textColor="@color/contrast"
        android:textStyle="bold"
        android:background="@drawable/round_corners_hard"
        android:backgroundTint="@color/main"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:onClick="postSecret"/>
    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_title"
        android:textSize="25sp"
        android:textColorHint="@color/letters"
        android:textColor="@color/letters"
        android:background="@drawable/round_corners_hard"
        android:backgroundTint="@color/white"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_below="@id/create_button"
        android:layout_centerHorizontal="true"
        android:importantForAutofill="no"
        android:inputType="textShortMessage" />
    <ScrollView
        android:id="@+id/create_scroll"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/create_title"
        android:background="@drawable/round_corners_soft"
        android:backgroundTint="@color/white"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp">
        <EditText
            android:id="@+id/create_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/create_secret"
            android:textSize="22.5sp"
            android:textColorHint="@color/letters"
            android:textColor="@color/letters"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />
    </ScrollView>
</RelativeLayout>